--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,18 +49,14 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_sign_up"
+        style="@style/CustomMaterialButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:letterSpacing="0.05"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="12dp"
         android:text="@string/label_sign_up"
-        android:textAllCaps="false"
-        android:textSize="16sp"
-        android:textStyle="bold"
         app:backgroundTint="@color/purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,12 +67,9 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/purple"
         android:letterSpacing="0.05"
         android:text="@string/label_sign_in"
-        android:textAllCaps="false"
-        android:textColor="@color/purple"
-        android:textSize="16sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />
