--- a/app/src/main/res/layout/fragment_track_activity.xml
+++ b/app/src/main/res/layout/fragment_track_activity.xml
@@ -4,6 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/background" />
+
+    <ImageView
+        android:id="@+id/buttonBack"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_margin="16dp"
+        android:src="@drawable/arrow"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,7 +27,8 @@
         android:paddingHorizontal="16dp"
         android:paddingTop="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/titleText"
@@ -30,7 +47,6 @@
                 android:id="@+id/distanceText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="14 км"
                 android:layout_marginTop="8dp"
                 android:textSize="24sp"
                 android:textColor="@color/black" />
@@ -39,9 +55,8 @@
                 android:id="@+id/timerText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="224dp"
+                android:layout_marginLeft="200dp"
                 android:layout_marginTop="8dp"
-                android:text="00:01:46"
                 android:textColor="@color/black"
                 android:textSize="24sp" />
 
