--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -106,7 +106,7 @@
             app:layout_constraintTop_toBottomOf="@id/distanceText"/>
 
         <TextView
-            android:id="@+id/timeRangeText"
+            android:id="@+id/startTimeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
@@ -114,6 +114,17 @@
             android:textColor="@color/light_grey"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/durationText"/>
+
+        <TextView
+            android:id="@+id/finishTimeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="32dp"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/light_grey"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@id/startTimeText"
             app:layout_constraintTop_toBottomOf="@id/durationText"/>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -124,7 +135,7 @@
             android:layout_marginHorizontal="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/timeRangeText">
+            app:layout_constraintTop_toBottomOf="@id/startTimeText">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
