--- a/app/src/main/res/layout/activity_item_main.xml
+++ b/app/src/main/res/layout/activity_item_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="24dp"
+    android:layout_marginTop="16dp"
     app:cardElevation="4dp"
     app:cardCornerRadius="8dp"
     app:cardBackgroundColor="@color/white"
